--- a/common.zh_CN.po
+++ b/common.zh_CN.po
@@ -712,11 +712,11 @@ msgstr "进球"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:144
 msgid "Number of hunts (Survival)"
-msgstr "猎杀数（生存模式）"
+msgstr "狩猎次数（生存模式）"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:144
 msgid "SCO^hunts"
-msgstr "猎杀"
+msgstr "狩猎"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:145
 msgid "Number of keys carrier kills"
@@ -896,7 +896,7 @@ msgstr "总和"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:168
 msgid "Number of survivals"
-msgstr "生还数"
+msgstr "生还次数"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:168
 msgid "SCO^survivals"
