--- a/common.zh_HK.po
+++ b/common.zh_HK.po
@@ -706,11 +706,11 @@ msgstr "進球"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:144
 msgid "Number of hunts (Survival)"
-msgstr "獵殺數（生存模式）"
+msgstr "狩獵次數（生存模式）"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:144
 msgid "SCO^hunts"
-msgstr "獵殺"
+msgstr "狩獵"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:145
 msgid "Number of keys carrier kills"
@@ -890,7 +890,7 @@ msgstr "總和"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:168
 msgid "Number of survivals"
-msgstr "生還數"
+msgstr "生還次數"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:168
 msgid "SCO^survivals"
