--- a/common.es.po
+++ b/common.es.po
@@ -708,7 +708,7 @@ msgstr "Número de asesinatos menos suicidios"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:142
 msgid "SCO^frags"
-msgstr "eliminaciones"
+msgstr "bajas"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:143
 msgid "Number of goals scored"
@@ -1530,7 +1530,7 @@ msgstr "Combate a muerte"
 
 #: qcsrc/common/gamemodes/gamemode/deathmatch/deathmatch.qh:8
 msgid "Score as many frags as you can"
-msgstr "Marca tantas eliminaciones como puedas"
+msgstr "Marca tantas bajas como puedas"
 
 #: qcsrc/common/gamemodes/gamemode/domination/domination.qh:12
 msgid "Capture and defend all the control points to win"
@@ -1609,8 +1609,8 @@ msgstr "Vidas:"
 #: qcsrc/common/gamemodes/gamemode/mayhem/mayhem.qh:10
 msgid "Compete for the most damage dealt and frags in this chaotic mayhem!"
 msgstr ""
-"¡Compite por causar el mayor daño y obtener la mayor cantidad de "
-"eliminaciones en este caótico Mayhem!"
+"¡Compite por causar el mayor daño y obtener la mayor cantidad de bajas en "
+"este caótico Mayhem!"
 
 #: qcsrc/common/gamemodes/gamemode/mayhem/mayhem.qh:10
 msgid "Mayhem"
@@ -1693,8 +1693,7 @@ msgstr "Supervivencia"
 #: qcsrc/common/gamemodes/gamemode/tdm/tdm.qh:9
 msgid "Help your team score the most frags against the enemy team"
 msgstr ""
-"Ayuda a tu equipo a acertar tantas eliminaciones como puedas contra el "
-"equipo enemigo"
+"Ayuda a tu equipo a acertar tantas bajas como puedas contra el equipo enemigo"
 
 #: qcsrc/common/gamemodes/gamemode/tdm/tdm.qh:9
 msgid "Team Deathmatch"
@@ -1714,7 +1713,7 @@ msgid ""
 "Compete with your team for the most damage dealt and frags in this chaotic "
 "mayhem!"
 msgstr ""
-"¡Compite con tu equipo por causar el mayor daño y obtener frags en este "
+"¡Compite con tu equipo por causar el mayor daño y obtener bajas en este "
 "caótico Mayhem!"
 
 #: qcsrc/common/gamemodes/gamemode/tmayhem/tmayhem.qh:10
@@ -1800,11 +1799,11 @@ msgstr "Lanzamiento de la @!#%'n Tuba"
 #: qcsrc/common/mapinfo.qh:89
 #: qcsrc/menu/xonotic/dialog_multiplayer_create.qc:107
 msgid "Frag limit:"
-msgstr "Límite de eliminaciones:"
+msgstr "Límite de bajas:"
 
 #: qcsrc/common/mapinfo.qh:89
 msgid "The amount of frags needed before the match will end"
-msgstr "Cantidad de eliminaciones necesarias antes de que termine el combate"
+msgstr "Cantidad de bajas necesarias antes de que termine el combate"
 
 #: qcsrc/common/minigames/cl_minigames.qc:379
 msgid "It's your turn"
@@ -4538,7 +4537,7 @@ msgstr "^BGHas recogido la pelota"
 
 #: qcsrc/common/notifications/all.inc:721
 msgid "^BGGet the ball to score points for frags!"
-msgstr "^BG¡Obtén la pelota para ganar puntos por eliminaciones!"
+msgstr "^BG¡Obtén la pelota para ganar puntos por bajas!"
 
 #: qcsrc/common/notifications/all.inc:723
 msgid ""
@@ -4915,7 +4914,7 @@ msgstr "tirar granada"
 #: qcsrc/common/notifications/all.qh:467
 #, c-format
 msgid "%s^K1 made a TRIPLE FRAG! %s^BG"
-msgstr "¡%s^K1 ha hecho una TRIPLE ELIMINACIÓN! %s^BG"
+msgstr "¡%s^K1 ha hecho una TRIPLE BAJA! %s^BG"
 
 #: qcsrc/common/notifications/all.qh:467
 #, c-format
@@ -4924,7 +4923,7 @@ msgstr "¡%s^K1 ha hecho TRIPLE ACIERTO! %s^BG"
 
 #: qcsrc/common/notifications/all.qh:467
 msgid "TRIPLE FRAG! "
-msgstr "¡TRIPLE ELIMINACIÓN! "
+msgstr "¡TRIPLE BAJA! "
 
 #: qcsrc/common/notifications/all.qh:468
 #, c-format
@@ -5046,7 +5045,7 @@ msgstr "¡%d aciertos seguidos! "
 #: qcsrc/common/notifications/all.qh:524
 #, c-format
 msgid "%d frag spree! "
-msgstr "¡%d eliminaciones seguidas! "
+msgstr "¡%d bajas seguidas! "
 
 #: qcsrc/common/notifications/all.qh:537
 msgid "First blood! "
@@ -5067,7 +5066,7 @@ msgstr "¡Primera víctima! "
 #: qcsrc/common/notifications/all.qh:582
 #, c-format
 msgid "%s^K1 has %d frags in a row! %s^BG"
-msgstr "¡%s^K1 tiene %d eliminaciones seguidas! %s^BG"
+msgstr "¡%s^K1 tiene %d bajas seguidas! %s^BG"
 
 #: qcsrc/common/notifications/all.qh:583
 #, c-format
@@ -5087,7 +5086,7 @@ msgstr "¡%s^K1 fue el primero en acertar! %s^BG"
 #: qcsrc/common/notifications/all.qh:618
 #, c-format
 msgid ", ending their %d frag spree"
-msgstr ", finalizando sus %d eliminaciones seguidas"
+msgstr ", finalizando sus %d bajas seguidas"
 
 #: qcsrc/common/notifications/all.qh:619
 #, c-format
@@ -5097,7 +5096,7 @@ msgstr ", finalizando sus %d aciertos seguidos"
 #: qcsrc/common/notifications/all.qh:633
 #, c-format
 msgid ", losing their %d frag spree"
-msgstr ", perdiendo sus %d eliminaciones seguidas"
+msgstr ", perdiendo sus %d bajas seguidas"
 
 #: qcsrc/common/notifications/all.qh:634
 #, c-format
@@ -8423,7 +8422,7 @@ msgstr "Burlas automáticas:"
 
 #: qcsrc/menu/xonotic/dialog_settings_audio.qc:178
 msgid "Automatically taunt enemies after fragging them"
-msgstr "Burlarse automáticamente de los enemigos al acertarlos"
+msgstr "Burlarse automáticamente de los enemigos al eliminarlos"
 
 #: qcsrc/menu/xonotic/dialog_settings_audio.qc:180
 msgid "Sometimes"
@@ -9062,7 +9061,7 @@ msgstr "¿Deseas iniciar un juego local para configurar el HUD?"
 
 #: qcsrc/menu/xonotic/dialog_settings_game_messages.qc:24
 msgid "Frag Information"
-msgstr "Información de Eliminación"
+msgstr "Información de Baja"
 
 #: qcsrc/menu/xonotic/dialog_settings_game_messages.qc:26
 msgid "Display information about killing sprees"
@@ -9107,14 +9106,13 @@ msgstr "Imprimir en línea separada"
 #: qcsrc/menu/xonotic/dialog_settings_game_messages.qc:58
 msgid "Add extra frag information to centerprint when available"
 msgstr ""
-"Añadir información adicional de eliminación a la visualización central "
-"cuando sea posible"
+"Añadir información adicional de la baja a la visualización central cuando "
+"sea posible"
 
 #: qcsrc/menu/xonotic/dialog_settings_game_messages.qc:62
 msgid "Add frag location to death messages when available"
 msgstr ""
-"Añadir localización de la eliminación en los mensajes de muertes cuando sea "
-"posible"
+"Añadir localización de la baja en los mensajes de muertes cuando sea posible"
 
 #: qcsrc/menu/xonotic/dialog_settings_game_messages.qc:65
 msgid "Gamemode Settings"
